# data_mining_apriori

./: README.md  main.py  pyproject.toml
apriori/: apriori.py
config/: params.env
data/: online_retail.csv  test.csv
